@@ -4,6 +4,7 @@ Revision history for SPVM
         * Support die statement without the operand again. This was remove at 0.9504(2021-02-10).
           die;
         * Add Fn->match method
+        * Simplify the compilation error messages of the character literal
         
         [SPECIFICATION FIX]
         * Add string literal escape character \$
